# langchain_basics

./: chatmodel_gemini.py  main.py  pyproject.toml
Basic_RAG/: RAG_101.PY  expanded_medical_data.txt  rag.txt  rag_demo.py
Basic_RAG/chroma_db_expanded/: chroma.sqlite3
chains/: conditional_chain.py  llmchians.py  parallel_chains.py  parallel_sequential.py  sequential_chains.py
chatbots/: 1.chatbot.py  2.chatprompt_template.py  chatbot_history.txt  message_placeholder.py
embeddings/: embeddings.py
outputParsers/: 1.str_output_parsers.py  2.structured_output.py
runnables/: runnable_sequence.py
structured_outputs/: 1.structured_outputs.py  2.detailed_output_structured.py  3.pydantic_structured_output.py
summarization/: summarization.py
tools/: 1.tools.py  structured_tools.py  toolkit.py
